--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GrandoGo</title>
 
-  <!-- HERE Maps Scripts -->
+  <!-- HERE Maps Scripts - Updated with latest versions -->
   <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
   <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
   <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
   <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
+
+  <!-- Additional HERE Maps modules -->
+  <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
+
+  <!-- Preload scripts for better performance -->
+  <link rel="preload" href="https://js.api.here.com/v3/3.1/mapsjs-core.js" as="script">
+
+  <style>
+      /* Ensure HERE Maps loads properly */
+      .H_Map {
+          background-color: #f3f4f6 !important;
+      }
+
+      /* Loading state styling */
+      .map-loading {
+          background: linear-gradient(45deg, #f3f4f6 25%, transparent 25%),
+          linear-gradient(-45deg, #f3f4f6 25%, transparent 25%),
+          linear-gradient(45deg, transparent 75%, #f3f4f6 75%),
+          linear-gradient(-45deg, transparent 75%, #f3f4f6 75%);
+          background-size: 20px 20px;
+          background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+          animation: slide 2s linear infinite;
+      }
+
+      @keyframes slide {
+          0% {
+              background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+          }
+          100% {
+              background-position: 20px 20px, 20px 30px, 30px 10px, 10px 20px;
+          }
+      }
+  </style>
 </head>
 <body>
 <div id="app"></div>
